# cmake_practice_windows

./: Jenkinsfile.txt  README.md  jenkins_build.bat  jenkins_clean_build.bat  jenkins_create_cmake_env.bat  test.txt  test1.cpp
src/: CMakeLists.txt
